heyclude.txt
 Run script build phase '[CP-User] [Hermes] Replace Hermes for the right configuration, if needed' will be run during every build because it does not specify any outputs. To address this issue, either add output dependencies to the script phase, or configure it to run in every build by unchecking "Based on dependency analysis" in the script phase. (in target 'hermes-engine' from project 'Pods')
    Run script build phase 'TAMTAM: Wrap codegen C++ headers' will be run during every build because it does not specify any outputs. To address this issue, either add output dependencies to the script phase, or configure it to run in every build by unchecking "Based on dependency analysis" in the script phase. (in target 'ReactCodegen' from project 'Pods')
Wrap step log (wrap.log)
  + chmod -R u+w Pods
  + chmod -R u+w ../node_modules/react-native
  + node ../scripts/wrap-cxx-headers.js
  TAMTAM: scanning Pods/Headers/Public, Pods/React-Core-prebuilt (cwd=/Users/runner/work/TAMTAM/TAMTAM/ios)
  TAMTAM: found 11876 .h/.hpp files
  TAMTAM: matched 5950 / 11876 ; patched 5950 ; skipped 0 ; errors 0
  TAMTAM: sample matched files:
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/bignum-dtoa.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/bignum.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/cached-powers.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/diy-fp.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/double-conversion.h
  TAMTAM: target Pods/Headers/Public/React-Fabric/react/renderer/components/view/BaseViewEventEmitter.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/node_modules/react-native/ReactCommon/react/renderer/components/view/BaseViewEventEmitter.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  TAMTAM: target Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/EventEmitters.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/build/generated/ios/ReactCodegen/react/renderer/components/lottiereactnative/EventEmitters.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /**
   * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
  TAMTAM: target Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/Props.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/build/generated/ios/ReactCodegen/react/renderer/components/lottiereactnative/Props.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /**
   * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
  TAMTAM: target Pods/Headers/Public/React-Core-prebuilt/yoga/YGEnums.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/React-Core-prebuilt/React.xcframework/Headers/Yoga/YGEnums.h
    seen-by-walk: true
    head:
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
  TAMTAM: target Pods/Headers/Public/React-Core-prebuilt/yoga/YGMacros.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/React-Core-prebuilt/React.xcframework/Headers/Yoga/YGMacros.h
    seen-by-walk: true
    head:
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  --- Pods/React-Core-prebuilt/React.xcframework/ios-arm64/React.framework/Headers/React_Fabric/BaseViewEventEmitter.h
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  --- Pods/Headers/Public/React-Fabric/react/renderer/components/view/BaseViewEventEmitter.h
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  --- Pods/Headers/Public/React-Core-prebuilt/React_Fabric/BaseViewEventEmitter.h
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
Build errors (last 200 lines around 'error:')
                       ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/ContainerView.swift:42:15: note: property declared here
      @objc var failureCallback: (_ error: String) -> Void {
                ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/ContainerView.swift:373:22: warning: main actor-isolated property 'failureCallback' can not be referenced from a Sendable closure
                  self.failureCallback("No data received for the Lottie animation from the URL.")
                       ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/ContainerView.swift:42:15: note: property declared here
      @objc var failureCallback: (_ error: String) -> Void {
                ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/ContainerView.swift:391:22: warning: main actor-isolated property 'failureCallback' can not be referenced from a Sendable closure
                  self.failureCallback("Unable to decode the Lottie animation object from the fetched URL source: \(error.localizedDescription)")
                       ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/ContainerView.swift:42:15: note: property declared here
      @objc var failureCallback: (_ error: String) -> Void {
                ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/AnimationViewManagerModule.swift:30:27: warning: will never be executed
                      print("Invalid view returned from registry, expecting ContainerView")
                            ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/AnimationViewManagerModule.swift:29:30: note: condition always evaluates to false
                  if RCT_DEBUG == 1 {
                               ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/AnimationViewManagerModule.swift:48:27: warning: will never be executed
  --
      cd /Users/runner/work/TAMTAM/TAMTAM/ios/Pods
      
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/expo-notifications/ios/EXNotifications/Badge/BadgeModule.swift:11:14: error: cannot find 'EXSharedApplication' in scope
        return EXSharedApplication().applicationIconBadgeNumber
               ^~~~~~~~~~~~~~~~~~~
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/expo-notifications/ios/EXNotifications/Badge/BadgeModule.swift:25:13: error: cannot find 'EXSharedApplication' in scope
              EXSharedApplication().applicationIconBadgeNumber = badgeCount
              ^~~~~~~~~~~~~~~~~~~
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/expo-notifications/ios/EXNotifications/Notifications/Handler/HandlerModule.swift:81:23: warning: 'alert' was deprecated in iOS 14.0
        options.insert(.alert)
                        ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/expo-notifications/ios/EXNotifications/Notifications/NotificationCenterManager.swift:42:21: warning: static property 'shared' is not concurrency-safe because non-'Sendable' type 'NotificationCenterManager' may have shared mutable state; this is an error in the Swift 6 language mode
    public static let shared = NotificationCenterManager()
                      ^
Error: Process completed with exit code 1.